public/stylesheets/app.css
/* ... */
.chip-body {
	color: white;
	padding: 0.5em;
	width: auto;
}

.chip-tag {
	display: flex;
	align-items: center;
	color: #222;
	background-color: white;
	border-top-left-radius: 6px;
	border-bottom-left-radius: 6px;
	padding: 0.4em;
	width: auto;
	font-family: "Francois One", sans-serif;
}

.chip-tag p {
	margin: 0;
}

.chip-wrap {
	margin-top: 10px;
	justify-content: left;
}

/* 	////////////////////////////////////////////
	IMG CLASSES - for projects and Companies
	////////////////////////////////////////////	*/

.bg-cover {
	background-size: cover;
	background-position: center;
}	

.bg-proj-small {
	background-position: center;
}

/* main projects */
.bg-wildtangent-casino {
	background-image: url("/images/ProjectHeaders/proj_main_wild-tangent.jpg");
}

.bg-spellslingers {
	background-image: url("/images/ProjectHeaders/proj_main_spell-slingers.jpg");
}

.bg-stellarfortune {
	background-image: url("/images/ProjectHeaders/proj_main_stellar-fortune.jpg");
}

/* companies */
.bg-freelance {
	background-image: url(/images/CompanyHeaders/sylvia-yang-409493-unsplash.jpg);
}

.bg-cake-golem {
	background-image: url(/images/CompanyHeaders/sergee-bee-7017-unsplash.jpg);
}

.bg-wildtangent {
	background-image: url(/images/CompanyHeaders/sergee-bee-6680-unsplash.jpg);
}

.bg-g3 {
	background-image: url(/images/CompanyHeaders/global_gaming_group.jpg);
}

.bg-spin-for-good {
	background-image: url(/images/CompanyHeaders/daniil-vnoutchkov-397278-unsplash.jpg);
}

.bg-sunstorm {
	background-image: url(/images/CompanyHeaders/sunstorm_games.jpg);
}

/* company projects */
.bg-proj-freelance {
	background-image: url(/images/ProjectHeaders/proj_freelance.jpg);
}

.bg-proj-spellslingers {
	background-image: url(/images/ProjectHeaders/proj_spell-slingers.jpg);
}

.bg-proj-wildtangentcasino {
	background-image: url(/images/ProjectHeaders/proj_wild-tangent-casino.jpg);
}

.bg-proj-stellarfortune {
	background-image: url(/images/ProjectHeaders/proj_stellar-fortune.jpg);
}

.bg-proj-spinforgood {
	background-image: url(/images/ProjectHeaders/proj_spin-for-good.jpg);
}

.bg-proj-sunnyvillepetsalon {
	background-image: url(/images/ProjectHeaders/proj_sunnyville-pet-salon-and-my-pony.jpg);
}

/* about */
.bg-artist {
	/* background-image: url(/images/Sam.jpg); */
	width: 250px;
	height: 250px;
}

/* 	////////////////////////////////////////////
	IMAGE GALLERIES - images in project pages
	////////////////////////////////////////////	*/

.gallery-img img {
	display: block;
	width: 100%;
	height: auto;
}

.gallery-grid {
	/* width: 100%; */
	/* max-width: 1410px; */
	margin: 0 auto;
}

.gallery-sizer, .gallery-item {
	width: calc(16% - 0px);
}

.gutter-sizer {
	width: calc((100% - (6*16%)) / 5);
}
.gallery-item {
	float: left;
	border: 1px solid rgba(0, 0, 0, 0.25);
	margin: 0 auto 7 auto;
}

.gallery-item-width-2 {
	width: calc(33% - 0px);
}

.gallery-item-width-4 {
	width: calc(66% - 0px);
}

.gallery-item-width-6 {
	width: calc(100% - 0px);
}

.gallery-btn {
	width: 25px;
	height: 25px;
	margin: 0 25px;
	display: flex;
	align-items: center;
	justify-content: center;
	background-color: grey;
	border: 1px solid white;
	border-radius: 5px;
}

.gallery-btn:hover {
	background-color: lightgrey;
}

.gallery-btn:active {
	background-color: #555;
	color: grey;
	border-color:grey;
}

.brief-section {
	width: 50%;
}

.veil {
	position: fixed;
	display: none;
	z-index: 20;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: rgba(0, 0, 0, 0.75);	
}

.zoom-image {
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
	width: 90%;
	height: 90%;
	background-image: url(/images/ProjectImages/Images_WildTangentCasino/Final/CasinoHostess.jpg);
}

.fullscreen {
	width: 100%;
	height: 100%;
}

.wrapper {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    padding-top: 25px;
    height: 0;
}
.wrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

/* 	////////////////////////////////////////////
	FOOTER - contact info and copyright claim
	////////////////////////////////////////////	*/

.contact {
	grid-area: contact;
	color: #dbc5c5;
	background-color: #a02828;
	background-image: url(/images/Chalkboard_small.jpg);
	background-repeat: repeat;
	background-size: contain;
	background-position: center;
	background-attachment: fixed;
	padding: 30px 0;
	border-top: 1px solid #850606;
	box-shadow: 0 0 20px rgba(0, 0, 0, 0.35);
	margin-top: 150px;
	-webkit-clip-path: polygon(0 30%, 100% 0, 100% 100%, 0 100%);
	clip-path: polygon(0 30%, 100% 0, 100% 100%, 0 100%);
}

.contact-content {
	margin: 0 auto;
	justify-content: center;
}

.icon-link {
	color: #dbc5c5;
}

.icon-link:hover {
	color: white;
}

.icon-link:active {
	color: #6d1110;
}

.phone {
	align-items: center;
	justify-content: center;
}

.contact i {
	padding: 0 10px;
	font-size: 1.5em;
}

.footer {
	grid-area: footer;
	margin-top: -30px;
	color: #ee2524;
	background-color: #8c1919;
	padding: 30px 16px 16px 16px;
	-webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0 100%);
	clip-path: polygon(0 0, 100% 30%, 100% 100%, 0 100%);
}

/* 	////////////////////////////////////////////
	HELPER CLASSES - small, generic, reusable
	////////////////////////////////////////////	*/

.flex-wrap {
	display: flex;
	flex-wrap: wrap;
}

.flex {
	display: flex;
}

.flex-section {
	flex: 1;
	min-width: 250px;
}

.flex-col {
	flex-direction: column;
}

.flex-justify-center {
	justify-content: center;
}

.flex-justify-betw {
	justify-content: space-between;
}

.flex-justify-even {
	justify-content: space-evenly;
}

.flex-justify-start {
	justify-content: flex-start;
}

.flex-align-center {
	align-items: center;
}

.flex-align-left {
	align-content: stretch;
}

.flex-align-start {
	align-content: flex-start;
}

.text-left {
	text-align: left;
}

.text-black {
	color: black;
}

.btn-regular {
	background-color: #6d1110;
	padding: 1em;
}

.width-third {
	width: 33.3%;
}
/* ... */

